Update Product text and fix styling on mobile to match about section

--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -291,20 +291,35 @@
 
 .section-products {
   margin-bottom: 50px;
-  .center-text {
-    padding: 0px 10%;
+  .left-text {
+    margin: 0 135px;
+    margin-bottom: 40px;
+    h4 {
+      border-left: 2px solid $orange-color;
+    }
+    p {
+      padding-left: 40px;
+      margin-left: 40px;
+      font-size: 16px;
+      margin-right: 15%;
+    }
   }
   img {
     margin: 0 auto;
     width: 88%;
   }
   @media (max-width: $pure-lg) {
-    .center-text {
-      padding: 0px 2%;
+    .left-text {
+      margin: 50px;
     }
     img {
       margin: 10px auto;
       width: 80%;
+    }
+  }
+  @media (max-width: $pure-sm) {
+    .left-text p {
+      margin-right: 0
     }
   }
 }
